--- a/MiPrimeraWeb/web/index.html
+++ b/MiPrimeraWeb/web/index.html
@@ -14,12 +14,13 @@ and open the template in the editor.
     <body>
         <h1>Bienvenido a la encuesta para desarolladores</h1>
         <p>Indica los lenguajes de programació que a utilizado</p>
-        <form action="salida.jsp">
+        
+        <form action="DatosEncuestas" method="post">
             <table border="0">
                 <tbody>
                     <tr>
                         <td>Nombre Completo</td>
-                        <td><input type="text" name="nombrecompleto" value=""/></td>
+                        <td><input type="text" name="nombreCompleto" value=""/></td>
                     </tr>
                     <tr>
                         <td>Java</td>
@@ -27,19 +28,19 @@ and open the template in the editor.
                     </tr>
                     <tr>
                         <td>Csharp</td>
-                        <td><input type="checkbox" name="proLeng" value="csharp"/></td>
+                        <td><input type="checkbox" name="proLeng" value="java"/></td>
                     </tr>
                     <tr>
                         <td>Python</td>
-                        <td><input type="checkbox" name="proLeng" value="python"/></td>
+                        <td><input type="checkbox" name="proLeng" value="java"/></td>
                     </tr>
                     <tr>
                         <td>Ruby</td>
-                        <td><input type="checkbox" name="proLeng" value="ruby"/></td>
+                        <td><input type="checkbox" name="proLeng" value="java"/></td>
                     </tr>
                     <tr>
                         <td>Php</td>
-                        <td><input type="checkbox" name="proLeng" value="php"/></td>
+                        <td><input type="checkbox" name="proLeng" value="java"/></td>
                     </tr>
                     <tr>
                         <td></td>
